--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <link rel="stylesheet" href="index.css">
+  <title>Solução Arthur</title>
 </head>
 
 <body>
@@ -18,9 +18,12 @@
             src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.mv6XB4672rdCHGhPXR3pSQHaEK%26pid%3DApi&f=1"
             alt="">
         </div>
-        <p class="card__text">Sunset </p>
-        <button class="card__button card__button--yes">Like</button>
-        <button class="card__button card__button--yes">Dislike</button>
+        <p class="card__text">Sunset de uma obra belissima encontrada na internet, nesse maravilhoso mundo do google
+          images. ENquanto escuto um divinity belissimo tambem</p>
+        <div class="card__button--flex">
+          <button class="card__button card__button--yes">Like</button>
+          <button class="card__button card__button--no">Dislike</button>
+        </div>
       </div>
     </li>
     <li>
@@ -31,8 +34,10 @@
             alt="">
         </div>
         <p class="card__text">Egito</p>
-        <button class="card__button card__button--yes">Like</button>
-        <button class="card__button card__button--yes">Dislike</button>
+        <div class="card__button--flex">
+          <button class="card__button card__button--yes">Like</button>
+          <button class="card__button card__button--no">Dislike</button>
+        </div>
       </div>
     </li>
     <li>
@@ -43,8 +48,10 @@
             alt="">
         </div>
         <p class="card__text">Vulcão colorido</p>
-        <button class="card__button card__button--yes">Like</button>
-        <button class="card__button card__button--yes">Dislike</button>
+        <div class="card__button--flex">
+          <button class="card__button card__button--yes">Like</button>
+          <button class="card__button card__button--no">Dislike</button>
+        </div>
       </div>
     </li>
     <li>
@@ -55,8 +62,10 @@
             alt="">
         </div>
         <p class="card__text">Floresta na Rússia</p>
-        <button class="card__button card__button--yes">Like</button>
-        <button class="card__button card__button--yes">Dislike</button>
+        <div class="card__button--flex">
+          <button class="card__button card__button--yes">Like</button>
+          <button class="card__button card__button--no">Dislike</button>
+        </div>
       </div>
     </li>
     <li>
@@ -67,8 +76,10 @@
             alt="">
         </div>
         <p class="card__text">Tundra</p>
-        <button class="card__button card__button--yes">Like</button>
-        <button class="card__button card__button--yes">Dislike</button>
+        <div class="card__button--flex">
+          <button class="card__button card__button--yes">Like</button>
+          <button class="card__button card__button--no">Dislike</button>
+        </div>
       </div>
     </li>
   </ul>
